Using joepie91's python whois, replaced the heartbleed script and replaced the wolfram lib

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wookie",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -11,7 +11,6 @@
     "underscore": "~1.6.0",
     "domo-kun": "~0.2.0",
     "request": "~2.34.0",
-    "node-whois": "~0.3.4",
-    "wolfram": "~0.3.0"
+    "node-wolfram": "0.0.1"
   }
 }
