--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "wookie",
   "version": "0.3.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "coffee-script": "~1.7.1",
-    "bluebird": "~1.2.1",
-    "underscore": "~1.6.0",
-    "domo-kun": "~0.2.0",
-    "request": "~2.34.0",
-    "node-wolfram": "0.0.1"
+    "coffee-script": "~1.8.0",
+    "bluebird": "~2.3.11",
+    "underscore": "~1.7.0",
+    "domo-kun": "~0.3.0",
+    "request": "~2.48.0"
   }
 }
